fix: 폰트 포맷 수정
ttf -> woff

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -16,6 +16,7 @@
     <meta content="%PUBLIC_URL%/favicon.png" property="og:image"/>
 
     <link rel="icon" href="<%= BASE_URL %>/favicon.ico">
+    <link href="<%= BASE_URL %>fonts/Jua-Regular.woff" as="font" type="font/woff" crossorigin/>
     <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 <body class="h-100">
