--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
-    <meta name="theme-color" content="#fcba08"/>
+    <meta name="theme-color" content="#ffffff"/>
     <meta content="website" property="og:type"/>
-    <meta content="for-your-recipe" property="og:site_name"/>
-    <meta content="//recipe-handbooks.netlify.app/" property="og:url"/>
+    <meta content="No.1 Recipe" property="og:site_name"/>
+    <meta content="//www.no1recipe.com" property="og:url"/>
     <meta content="ko_KR" property="og:locale"/>
     <meta content="en_US" property="og:locale:alternate"/>
     <meta content="Recipe" property="og:title"/>
-    <meta content="찾는 레시피는 다 있다" property="og:description"/>
+    <meta content="빠르게 찾고 빨리 해먹자. No.1 Recipe" property="og:description"/>
     <meta content="%PUBLIC_URL%/favicon.png" property="og:image"/>
 
     <link rel="icon" href="<%= BASE_URL %>/favicon.ico">
