--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="kr" class="scroll h-100">
+<html lang="kr" class="scroll">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -20,8 +20,8 @@
     <link href="<%= BASE_URL %>fonts/KoPubWorld-Dotum-Light.woff" as="font" type="font/woff" crossorigin/>
     <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
-<body class="h-100">
-<div id="app" class="h-100"></div>
+<body>
+<div id="app"></div>
 <div id="modal"></div>
 </body>
 </html>
