--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -13,7 +13,7 @@
     <meta content="en_US" property="og:locale:alternate"/>
     <meta content="Recipe" property="og:title"/>
     <meta content="빠르게 찾고 빨리 해먹자. No.1 Recipe" property="og:description"/>
-    <meta content="<%= BASE_URL %>/favicon.png" property="og:image"/>
+    <meta content="<%= BASE_URL %>/favicon.ico" property="og:image"/>
 
     <link rel="icon" href="<%= BASE_URL %>/favicon.ico">
     <link href="<%= BASE_URL %>fonts/EBGaramond-Medium.woff" as="font" type="font/woff" crossorigin/>
