--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,10 +9,12 @@
             name="description"
             content="Web site created using create-react-app"
     />
-<!--    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png"/>-->
+    <!--    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png"/>-->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
-    <link rel="preload" as="style" crossorigin
-          href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.6/dist/web/static/pretendard.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link as="style" href="https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@300&display=swap"
+          rel="stylesheet">
     <title>React App</title>
 </head>
 <body>
